<resources>
    <string name="app_name">Consumidor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="haz_clic_aqu_para_registrarse">haz clic aquí para registrarse</string>
    <string name="ingresar">ingresar</string>
    <string name="contrase_a">contraseña</string>
    <string name="usuario_dominio_com">usuario@dominio.com</string>
    <string name="correo_electr_nico">correo electrónico</string>
    <string name="inicio_de_sesion">inicio de sesion</string>
    <string name="registro_de_usuarios">Registro de Usuarios</string>
    <string name="usuario">Usuario</string>
    <string name="p_e_pperez">p.e. pperez</string>
    <string name="nombre">Nombre</string>
    <string name="p_e_pepe_perez">p.e. Pepe Perez</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="p_e_micorreo_gmail_com">p.e. micorreo@gmail.com</string>
    <string name="registrar">Registrar</string>
    <string name="regresar">Regresar</string>
    <string name="consultar">Consultar</string>
    <string name="modificar">modificar</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="eliminar">Eliminar</string>
</resources>