<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_usuarios"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/etUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/p_e_pperez"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:autofillHints="Usuario" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/p_e_pepe_perez"
        android:inputType="textPersonName"
        android:gravity="center_horizontal"
        android:autofillHints="Nombre" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo_electronico"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/p_e_micorreo_gmail_com"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:autofillHints="Correo" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/etClave"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:gravity="center_horizontal"
        android:autofillHints="Contraseña" />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnRegistrar"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/registrar"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnRegresar"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/regresar"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>